--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
+    "eslint": "^4.5.0",
+    "eslint-plugin-react": "^7.3.0",
     "jest": "20.0.4",
     "react-test-renderer": "16.0.0-alpha.12"
   },
